Fixed out animation so there is no jump, but smooth transition

--- a/sass/layout/_order.scss
+++ b/sass/layout/_order.scss
@@ -337,6 +337,7 @@
     animation-name: backOutRight;
     animation-duration: 1s;
     animation-fill-mode: both;
+    min-height: initial;
 }
 
 @keyframes hideElement {
